# party-parrot

./: .coverage  .cursorrules  .gitignore  AGENTS.md  CODE_REVIEW.md  Justfile  README.md  TODO.md  VJ_FIXES_COMPLETE.md  VJ_SYSTEM_SPEC.md  alembic.ini  big_gui.json  crux_test_gui.json  dmack_gui.json  gui.json  imgui.ini  list_usb_devices.py  main.sh  mtn_lotus_gui.json  parrot_cloud.db  pyproject.toml  quick_vj_test.py  requirements.txt  run_party_parrot.py  run_party_parrot_split.py  scan_dmx_controllers.py  setup-dev-env.sh  start_headless.sh  start_party_parrot.py  state.json  test.sh  test_artnet_sine.ipynb  test_audio_response.py  test_core_vj.py  test_final_gui_vj.py  test_gui_focus.py  test_gui_minimal.py  test_gui_visibility.py  test_gui_without_pygame.py  test_gui_working.py  (+11 more)
.cursor/: environment.json
.cursor/rules/: parrot.mdc
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: pytest.yml
examples/: architecture_test.py  color_lighting_demo.py  complete_vj_mode_demo.py  dead_sexy_halloween_demo.py  dead_sexy_with_color_lighting.py  final_gpu_test.py  font_showcase_demo.py  gpu_optimization_demo.py  laser_show_demo.py  pyramid_rave_demo.py  scene_shift_video_demo.py  simple_dsl_demo.py  strobe_effects_demo.py  trippy_shader_demo.py  ultimate_dead_sexy_demo.py  video_switching_demo.py  vj_director_visual_test.py  vj_dsl_demo.py  vj_example.py
parrot/: dmx-entec-pro.py  gl_display_mode.py  gl_window_app.py  headless_dmx_bridge.py  keyboard_handler.py  launch_stack.py  main.py  main_demucs.py  patch_bay.py  pyenttec.py  runtime_fixture_state.py  runtime_venue_client.py  state.py  test_director_position_integration.py  test_encode_texture_jpeg.py  test_gl_overlay.py  test_keyboard_handler.py  test_launch_stack.py  test_main.py  test_manual_dimmer_integration.py  test_patch_bay.py  test_runtime_fixture_state.py  test_runtime_venue_client.py  test_runtime_venue_sync.py  test_state.py  test_venue_editor.py  venue_editor.py  venue_runtime.py
parrot/api/: __init__.py  test_web_server.py  web_server.py
parrot_cloud/: app.py  database.py  domain.py  fixture_catalog.py  fixture_type_aliases.py  main.py  management.py  models.py  repository.py  seeds.py  test_app.py  test_browser_integration.py  test_repository.py  test_ws_hub.py  ws_hub.py
parrot_cloud_alembic/: env.py
scripts/: calibrate_bpm.py
src/: main.py  main_demucs.py  pilot.py
(+489 files in other folders)
